<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="24.5dp"
    android:layout_marginRight="24.5dp"
    android:background="@mipmap/qd1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="113dp"
        android:text="@string/tv_qdcg"
        android:textColor="@color/bg_r_4"
        android:textSize="19.37dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom">

        <TextView
            android:id="@+id/id_jf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/bg_r_4"
            android:textSize="60.67dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_jf"
            android:textColor="@color/bg_r_4" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/id_btn_ksp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@mipmap/qd3"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ksptip"
            android:textColor="@color/bg_r_4"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/id_jf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="0"
            android:textColor="@color/bg_r_4"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_jf"
            android:textColor="@color/bg_r_4"
            android:textSize="14dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/id_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12.5dp"
        android:background="@mipmap/qd2"
        android:gravity="center"
        android:text="@string/tv_zdl"
        android:textColor="@color/white"
        android:textSize="14dp" />

    <FrameLayout
        android:id="@+id/sign_banner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"></FrameLayout>

</LinearLayout>